@@ -211,7 +211,7 @@ degrees west of Greenwich.
 (Use negative angle for east.)
 This is used in the calculation of solar time.
 Be sure to give the correct longitude also!
-If solar time is given directly, then this option has no effect.
+If a time zone or solar time is given directly, then this option has no effect.
 .SH EXAMPLE
 To produce a sunny sky for July 4th at 2:30pm Eastern daylight time at a
 site latitude of 42 degrees, 89 degrees west longitude:
